# NeonBuzz

./: CMakeLists.txt  README.md  Working.md  imgui.ini  setup.sh
.github/: copilot-instructions.md
include/: App.h  ImageProcessor.h  Renderer.h
src/: App.cpp  ImageProcessor.cpp  Renderer.cpp  main.cpp
